--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -246,7 +246,7 @@
         list.push("P1-Villa-102,@Pratima Singh,@1000,@,@,@"); 
         list.push("P1-Villa-103,@Vandana Soni,@Vacant,@,@,@"); 
         list.push("P1-Villa-104,@Rajender Singh,@Vacant,@,@,@"); 
-        list.push("P1-Villa-105,@Vandana Soni,@Vacant,@,@,@"); 
+        list.push("P1-Villa-105,@Kedar Singh,@Vacant,@,@,@"); 
         list.push("P1-Villa-106,@Vandana Soni,@Vacant,@,@,@"); 
         list.push("P1-Villa-107,@Rita Soni,@Vacant,@,@,@"); 
         list.push("P1-Villa-108,@Shanky Munjal,@Vacant,@,@,@"); 
