--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -271,7 +271,7 @@
         list.push("P1-Villa-102,Pratima Singh,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-103,Vandana Soni,,,,,,,,,"); 
         list.push("P1-Villa-104,Rajender Singh,2000,3000,3000,,,,,,"); 
-        list.push("P1-Villa-105,Vandana Soni,2000,2000,2000,,,,,,"); 
+        list.push("P1-Villa-105,Kedar Singh,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-106,Vandana Soni,,,,,,,,,"); 
         list.push("P1-Villa-107,Rita Soni,,,,,,,,,"); 
         list.push("P1-Villa-108,Shanky Munjal,2000,3000,3000,,,,,,"); 
