--- a/OwnersRentDetails.html
+++ b/OwnersRentDetails.html
@@ -233,7 +233,7 @@
         list.push("P1-Villa-102,@Pratima Singh,@8384925336,@2,@Owner"); 
         list.push("P1-Villa-103,@Vandana Soni,@8094296135,@2,@Owner"); 
         list.push("P1-Villa-104,@Rajender Singh,@8094296135,@2,@Owner"); 
-        list.push("P1-Villa-105,@Vandana Soni,@8094296135,@2,@Owner"); 
+        list.push("P1-Villa-105,@Kedar Singh,@9829558244,@2,@Owner"); 
         list.push("P1-Villa-106,@Vandana Soni,@8094296135,@2,@Owner"); 
         list.push("P1-Villa-107,@Rita Soni,@8949349670,@2,@Owner"); 
         list.push("P1-Villa-108,@Shanky Munjal,@8010683360,@2,@Owner"); 
