--- a/MemberShip.html
+++ b/MemberShip.html
@@ -167,7 +167,7 @@ list.push("P1-Villa-01,Pooja Sharma,Pending");
         list.push("P1-Villa-24,Abhimanyu Saraswat,Done"); 
         list.push("P1-Villa-25,Pooja Khandelwal,Pending"); 
         list.push("P1-Villa-26,Rakesh Kumar,Fees_Only"); 
-        list.push("P1-Villa-27,Deepesh Sharma,Done"); 
+        list.push("P1-Villa-27,Murari Sharma,Done"); 
         list.push("P1-Villa-28,Mohit Juneja,Fees_Only"); 
         list.push("P1-Villa-29,Lokshita Mathur,Pending"); 
         list.push("P1-Villa-30,Peeyush Mathur,Pending"); 
