--- a/OwnersRentDetails.html
+++ b/OwnersRentDetails.html
@@ -153,7 +153,7 @@
         list.push("P1-Villa-24,@Abhimanyu Saraswat,@9461594523,@4,@Owner"); 
         list.push("P1-Villa-25,@Pooja Khandelwal,@9414622244,@2,@Owner"); 
         list.push("P1-Villa-26,@Rakesh Kumar,@9079205061,@3,@Owner"); 
-        list.push("P1-Villa-27,@Deepesh Sharma,@9829192929,@3,@Owner"); 
+        list.push("P1-Villa-27,@Murari Sharma,@9829192929,@3,@Owner"); 
         list.push("P1-Villa-28,@Mohit Juneja,@7014643282,@4,@Owner"); 
         list.push("P1-Villa-29,@Lokshita Mathur,@9829050150,@2,@Owner"); 
         list.push("P1-Villa-30,@Peeyush Mathur,@9829050150,@2,@Owner"); 
