--- a/VehicleOwner.html
+++ b/VehicleOwner.html
@@ -136,7 +136,7 @@
      list.push("P1-Villa-19,@Hitesh Sain,@RJ-02-CD-3674,@"); 9650978342
      list.push("P1-Villa-24,@Abhimanyu Saraswat,@RJ01-CC-3068/ RJ01-CE-0919/ RJ14NC4125,@"); 9461594523
      list.push("P1-Villa-26,@Rakesh Kumar,@RJ45-CH-1989,@"); 9079205061
-     list.push("P1-Villa-27,@Deepesh Sharma,@RJ14-CU-6335,@"); 9829192929
+     list.push("P1-Villa-27,@Murari Sharma,@RJ14-CU-6335,@"); 9829192929
      list.push("P1-Villa-28,@Mohit Juneja,@RJ06-CC-5257,@"); 7014643282
      list.push("P1-Villa-33,@Prakash Joshi,@RJ06-CB-4388,@"); 8128028832
      list.push("P1-Villa-34,@Vijay Meena,@RJ23-BH-2544A,@"); 9667392585
