--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -198,7 +198,7 @@
         list.push("P1-Villa-55,@Raj Kamal,@Vacant,@,@,@"); 
         list.push("P1-Villa-56_57A,@Kajor Mal Goyal,@Vacant,@,@,@"); 
         list.push("P1-Villa-58_57B,@Deepak Swaroop Garg,@Vacant,@,@,@"); 
-        list.push("P1-Villa-59,@Kamal Preet Singh Narula,@Vacant,@,@,@"); 
+        list.push("P1-Villa-59,@Pawan Jaiman,@Vacant,@,@,@"); 
         list.push("P1-Villa-60,@Santra Devi,@Vacant,@,@,@"); 
         list.push("P1-Villa-61,@Divanshi Dhanjani,@1000,@,@,@"); 
 
