--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -211,7 +211,7 @@
         list.push("P1-Villa-43,Arun Tripathi,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-44,Ravindra Verma,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-45,Nand Singh Rajawat,2000,0,0,,,,,,"); 
-        list.push("P1-Villa-46,Vikas Mahala,2000,2000,0,,,,,,"); 
+        list.push("P1-Villa-46,Vikas Mahala,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-47,Manoj Ji,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-48,R C Sharma ,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-49,Sunita Verma,2000,2000,2000,,,,,,"); 
@@ -223,7 +223,7 @@
         list.push("P1-Villa-55,Raj Kamal,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-56_57A,Kajor Mal Goyal,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-58_57B,Deepak Swaroop Garg,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-59,Kamal Preet Singh Narula,,,,,,,,,"); 
+        list.push("P1-Villa-59,Pawan Jaiman,,,3000,,,,,,"); 
         list.push("P1-Villa-60,Santra Devi,,,,,,,,,"); 
         list.push("P1-Villa-61,Divanshi Dhanjani,2000,2000,2000,,,,,,"); 
 
