--- a/MemberShip.html
+++ b/MemberShip.html
@@ -198,7 +198,7 @@ list.push("P1-Villa-01,Pooja Sharma,Pending");
         list.push("P1-Villa-55,Raj Kamal,Pending"); 
         list.push("P1-Villa-56_57A,Kajor Mal Goyal,Pending"); 
         list.push("P1-Villa-58_57B,Deepak Swaroop Garg,Pending"); 
-        list.push("P1-Villa-59,Kamal Preet Singh Narula,Pending"); 
+        list.push("P1-Villa-59,Pawan Jaiman,Pending"); 
         list.push("P1-Villa-60,Santra Devi,Pending"); 
         list.push("P1-Villa-61,Divanshi Dhanjani,Pending"); 
         list.push("P1-Villa-62,Lal Singh,Pending"); 
