--- a/VehicleOwner.html
+++ b/VehicleOwner.html
@@ -178,6 +178,8 @@
 
      list.push("P2-Villa-31,@Navdeep Kumar,@DL-9CAS00812,@"); 9717781488
      list.push("P2-Villa-34,@Monika shahani,@HR-35-6908/ RJ14-WC-3226,@"); 8696962600
+     list.push("P2-Villa-39,@Nikita sharma,@RJ01-CA-6048,@"); 9494536822
+
      list.push("P2-Villa-47,@Geeta Devi,@23BH-6738-K,@"); 9414793657
 
      list.push("P2-Villa-55,@Kriti Maheswari,@UP78-EU-4545/ UP78-EY-6363,@"); 9935031104
