--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -224,7 +224,7 @@
         list.push("P1-Villa-55,Raj Kamal,-2000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-56_57A,Kajor Mal Goyal,0,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-58_57B,Deepak Swaroop Garg,-2000,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-59,Pawan Jaiman,-3000,0,,3000,,,,,,"); 
+        list.push("P1-Villa-59,Pawan Jaiman,0,0,3000,3000,,,,,,"); 
         list.push("P1-Villa-60,Santra Devi,-8000,,,,,,,,,"); 
         list.push("P1-Villa-61,Divanshi Dhanjani,-2000,2000,2000,2000,,,,,,"); 
 
