--- a/index.html
+++ b/index.html
@@ -485,6 +485,12 @@
 			</div>
 		</footer>
 	</div>
+	
+	<script>	if (location.protocol == 'https:'){
+        location.href = location.href.replace("https","http");
+      }
+	  
+	</script>
 	<script src="js/jquery-3.1.1.min.js"></script>
 	<script src="js/animationCounter.js"></script>
 	<script src="js/bootstrap.min.js"></script>
