--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -189,14 +189,14 @@
         list.push("P1-Villa-20,Ved Prakash Parashar,-2000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-21,Dariya Singh,0,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-22,Shivani sanjeev sharma,-6000,2000,,,,,,,,");
-        list.push("P1-Villa-23,Akshay Saraswat,-8000,,,,,,,,,"); 
+        list.push("P1-Villa-23,Akshay Saraswat,0,0,0,0,,,,,,"); 
         list.push("P1-Villa-24,Abhimanyu Saraswat,0,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-25,Pooja Khandelwal,-8000,,,,,,,,,"); 
         list.push("P1-Villa-26,Rakesh Kumar,0,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-27,Murari Sharma,-2000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-28,Mohit Juneja,0,2000,3000,3000,,,,,,"); 
-        list.push("P1-Villa-29,Lokshita Mathur,-8000,,,,,,,,,"); 
-        list.push("P1-Villa-30,Peeyush Mathur,-8000,,,,,,,,,"); 
+        list.push("P1-Villa-29,Lokshita Mathur,0,0,0,0,,,,,,"); 
+        list.push("P1-Villa-30,Peeyush Mathur,0,0,0,0,,,,,,"); 
         list.push("P1-Villa-31,Mahesh Taparia,-2000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-32,Peeyush Verma,-2000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-33,Prakash Joshi,-2000,2000,2000,2000,,,,,,"); 
