--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -233,7 +233,7 @@
         list.push("P1-Villa-63,Yogesh Ji,0,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-64,Sahil Meghnani,0,2000,3000,3000,,,,,,");
         list.push("P1-Villa-65,Jalaj Rajpurohit,0,2000,3000,3000,,,,,,");
-        list.push("P1-Villa-66,Manju Gehlot,-8000,,,,,,,,,");
+        list.push("P1-Villa-66,Manju Gehlot,0,2000,3000,3000,,,,,,");
         list.push("P1-Villa-67,Abhishek Jaiman,0,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-68,Shrish Jaiman,0,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-69,Piyush Sharma,0,2000,3000,3000,,,,,,"); 
