--- a/MemberShip.html
+++ b/MemberShip.html
@@ -220,7 +220,7 @@ list.push("P1-Villa-01,Pooja Sharma,Pending");
         list.push("P1-Villa-78,Akshat Mangal,Pending"); 
         list.push("P1-Villa-79,Rahul Peswani,Done"); 
         list.push("P1-Villa-80,Rahul Peswani,Pending"); 
-        list.push("P1-Villa-81,Mamta Sharma,Pending"); 
+        list.push("P1-Villa-81,Mamta Sharma,Fees_Only"); 
         list.push("P1-Villa-82,Swati Bansal,Done"); 
         list.push("P1-Villa-83,Tarun Sharda,Pending"); 
         list.push("P1-Villa-84,Tarun Sharda,Pending"); 
