--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -204,7 +204,7 @@
         list.push("P1-Villa-35,D V Saraswat,0,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-36,Harish Kumar Yadav,0,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-37,Gajendra Sharma,0,2000,3000,3000,,,,,,"); 
-        list.push("P1-Villa-38,ManishaSingh,-6000,2000,,,,,,,,"); 
+        list.push("P1-Villa-38,ManishaSingh,0,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-39,Manish Salvi,0,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-40,Anita Kanwar,-2000,0,2000,2000,,,,,,"); 
         list.push("P1-Villa-41,Monika Mittal,-2000,2000,2000,2000,,,,,,"); 
