--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -208,7 +208,7 @@
         list.push("P1-Villa-39,Manish Salvi,0,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-40,Anita Kanwar,-2000,0,2000,2000,,,,,,"); 
         list.push("P1-Villa-41,Monika Mittal,-2000,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-42,Prakash Gaur,0,2000,3000,3000,,,,,,"); 
+        list.push("P1-Villa-42,Prakash Gaur,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-43,Arun Tripathi,-2000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-44,Ravindra Verma,0,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-45,Nand Singh Rajawat,0,2000,3000,3000,,,,,,"); 
@@ -222,8 +222,8 @@
         list.push("P1-Villa-53,Rohit Jain,0,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-54,Vinod Kumar Garg,-2000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-55,Raj Kamal,-2000,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-56_57A,Kajor Mal Goyal,0,2000,3000,3000,,,,,,"); 
-        list.push("P1-Villa-58_57B,Deepak Swaroop Garg,0,2000,3000,3000,,,,,,"); 
+        list.push("P1-Villa-56_57A,Kajor Mal Goyal,0,2000,3000,3000,3000,3000,3000,,,"); 
+        list.push("P1-Villa-58_57B,Deepak Swaroop Garg,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-59,Pawan Jaiman,0,0,3000,3000,,,,,,"); 
         list.push("P1-Villa-60,Santra Devi,-8000,,,,,,,,,"); 
         list.push("P1-Villa-61,Divanshi Dhanjani,0,2000,3000,3000,,,,,,"); 
@@ -267,7 +267,7 @@
         list.push("P1-Villa-97,Surendra Kumawat,-8000,,,,,,,,,"); 
         list.push("P1-Villa-98,Hitesh Jain,0,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-99,Sakshi Singh,0,2000,3000,3000,,,,,,"); 
-        list.push("P1-Villa-100,Akansha Garg,0,2000,3000,3000,,,,,,"); 
+        list.push("P1-Villa-100,Akansha Garg,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-101,Laxmi Agarwal,-8000,,,,,,,,,"); 
         list.push("P1-Villa-102,Pratima Singh,0,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-103,Unkown,-8000,,,,,,,,,"); 
