--- a/OwnersRentDetails.html
+++ b/OwnersRentDetails.html
@@ -18,9 +18,9 @@
     <link rel="shortcut icon" href="img/logo1.png" type="image/x-icon">
 </head>
 
-<!--<body onload="getOwnerDetails()">-->
+<body onload="getOwnerDetails()">
    <!-- <body onload="myFunction()">-->
-        <body>
+     <!--   <body>-->
     <div class="wrapper">
         <header class="header">
             <section class="header-top">
@@ -62,17 +62,17 @@
 
 	<p>  </p>
 
-	
+<!--	
     <p style="color: rgb(30, 7, 243)"> Enter Password For View Details: </p>
 
     <div class="form-group">
-          <!-- <label for="">View Order details</label> -->
+     
         <input id="password" type="text" class="form-control text-left px-3"  placeholder="" maxlength=20>
     </div>
     <input type="submit" value="Show Details"  onclick="myFunction()" class="btn btn-primary py-3 px-5">
     </div>
     
-  
+-->
    
 
 
