--- a/OwnersRentDetails.html
+++ b/OwnersRentDetails.html
@@ -257,7 +257,7 @@
         list.push("P1-Villa-100,@Akansha Garg,@9731123390,@2,@Owner"); 
         list.push("P1-Villa-101,@Laxmi Agarwal,@9660597792,@2,@Owner"); 
         list.push("P1-Villa-102,@Pratima Singh,@8384925336,@2,@Owner"); 
-        list.push("P1-Villa-103,@Vandana Soni,@8094296135,@2,@Owner"); 
+        list.push("P1-Villa-103,@Ritika,@9413329992,@2,@Owner"); 
         list.push("P1-Villa-104,@Rajender Singh,@8094296135,@2,@Owner"); 
         list.push("P1-Villa-105,@Kedar Singh,@9829558244,@2,@Owner"); 
         list.push("P1-Villa-106,@Vandana Soni,@8094296135,@2,@Owner"); 
