--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -255,14 +255,14 @@
         list.push("P1-Villa-85,Pradeep Verma,-2000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-86,Surendra Agrawal,0,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-87,Devendra Singh,-2000,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-88,Pankaj Chauhan & Pushpa Tomar,-2000,2000,2000,2000,,,,,,"); 
+        list.push("P1-Villa-88,Pankaj Chauhan & Pushpa Tomar,0,2000,3000,3000,1000,,,,,"); 
         list.push("P1-Villa-89,Khem Chand Nagal,-8000,,,,,,,,,"); 
         list.push("P1-Villa-90,Vivek Dubey,-8000,,,,,,,,,"); 
         list.push("P1-Villa-91,Rajendra Prasad Gupta,-8000,,,,,,,,,"); 
         list.push("P1-Villa-92,Anil Kumar Gupta,-8000,,,,,,,,,"); 
         list.push("P1-Villa-93,Manju Sexena,-8000,,,,,,,,,"); 
         list.push("P1-Villa-94,Rounak Rajendra Bhatt,-8000,,,,,,,,,"); 
-        list.push("P1-Villa-95,Deepti Sharma,-8000,,,,,,,,,"); 
+        list.push("P1-Villa-95,Deepti Sharma,0,0,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-96,George Pal Singh,0,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-97,Surendra Kumawat,-8000,,,,,,,,,"); 
         list.push("P1-Villa-98,Hitesh Jain,0,2000,3000,3000,,,,,,"); 
@@ -270,7 +270,7 @@
         list.push("P1-Villa-100,Akansha Garg,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-101,Laxmi Agarwal,-8000,,,,,,,,,"); 
         list.push("P1-Villa-102,Pratima Singh,0,2000,3000,3000,,,,,,"); 
-        list.push("P1-Villa-103,Unkown,-8000,,,,,,,,,"); 
+        list.push("P1-Villa-103,Ritika,-8000,,,,,,,,,"); 
         list.push("P1-Villa-104,Rajender Singh,0,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-105,Kedar Singh,0,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-106,Vandana Soni,-8000,,,,,,,,,"); 
