--- a/MemberShip.html
+++ b/MemberShip.html
@@ -161,7 +161,7 @@ list.push("P1-Villa-01,Pooja Sharma,Pending");
         list.push("P1-Villa-18,Pooja	Saxena,Fees_Only"); 
         list.push("P1-Villa-19,Hitesh Sain,Fees_Only"); 
         list.push("P1-Villa-20,Ved Prakash Parashar,Pending"); 
-        list.push("P1-Villa-21,Dariya Singh,Pending"); 
+        list.push("P1-Villa-21,Dariya Singh,Done"); 
         list.push("P1-Villa-22,Shivani sanjeev sharma,Pending"); 
         list.push("P1-Villa-23,Akshay Saraswat,Pending"); 
         list.push("P1-Villa-24,Abhimanyu Saraswat,Done"); 
