--- a/MemberShip.html
+++ b/MemberShip.html
@@ -186,9 +186,9 @@ list.push("P1-Villa-01,Pooja Sharma,Pending");
         list.push("P1-Villa-43,Arun Tripathi,Form_Only"); 
         list.push("P1-Villa-44,Ravindra Verma,Form_Only"); 
         list.push("P1-Villa-45,Nand Singh Rajawat,Form_Only"); 
-        list.push("P1-Villa-46,Vikas Mahala,Fees_Only"); 
-        list.push("P1-Villa-47,Manoj Ji,Form_Only"); 
-        list.push("P1-Villa-48,R C Sharma ,Form_Only"); 
+        list.push("P1-Villa-46,Vikas Mahala,Done"); 
+        list.push("P1-Villa-47,Manoj Ji,Done"); 
+        list.push("P1-Villa-48,R C Sharma ,Done"); 
         list.push("P1-Villa-49,Sunita Verma,Pending"); 
         list.push("P1-Villa-50,Abhishek Garg,Pending"); 
         list.push("P1-Villa-51,Jatin Kumar,Pending"); 
@@ -234,7 +234,7 @@ list.push("P1-Villa-01,Pooja Sharma,Pending");
         list.push("P1-Villa-92,Anil Kumar Gupta,Pending"); 
         list.push("P1-Villa-93,Manju Sexena,Pending"); 
         list.push("P1-Villa-94,Rounak Rajendra Bhatt,Pending"); 
-        list.push("P1-Villa-95,Deepti Sharma,Pending"); 
+        list.push("P1-Villa-95,Naresh Mathur,Pending"); 
         list.push("P1-Villa-96,George Pal Singh,Pending"); 
         list.push("P1-Villa-97,Surendra Kumawat,Done"); 
         list.push("P1-Villa-98,Hitesh Jain,Fees_Only"); 
