--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -203,7 +203,7 @@
         list.push("P1-Villa-34,Vijay Meena,0,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-35,D V Saraswat,0,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-36,Harish Kumar Yadav,0,2000,3000,3000,,,,,,"); 
-        list.push("P1-Villa-37,Gajendra Sharma,0,2000,3000,3000,,,,,,"); 
+        list.push("P1-Villa-37,Gajendra Sharma,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-38,ManishaSingh,0,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-39,Manish Salvi,0,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-40,Anita Kanwar,-2000,0,2000,2000,,,,,,"); 
@@ -213,7 +213,7 @@
         list.push("P1-Villa-44,Ravindra Verma,0,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-45,Nand Singh Rajawat,0,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-46,Vikas Mahala,0,2000,3000,3000,,,,,,"); 
-        list.push("P1-Villa-47,Manoj Ji,-2000,2000,2000,2000,,,,,,"); 
+        list.push("P1-Villa-47,Manoj Ji,0,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-48,R C Sharma ,0,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-49,Sunita Verma,-2000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-50,Abhishek Garg,0,2000,3000,3000,,,,,,"); 
@@ -262,7 +262,7 @@
         list.push("P1-Villa-92,Anil Kumar Gupta,-8000,,,,,,,,,"); 
         list.push("P1-Villa-93,Manju Sexena,-8000,,,,,,,,,"); 
         list.push("P1-Villa-94,Rounak Rajendra Bhatt,-8000,,,,,,,,,"); 
-        list.push("P1-Villa-95,Deepti Sharma,0,0,3000,3000,3000,,,,,"); 
+        list.push("P1-Villa-95,Naresh Mathur,0,0,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-96,George Pal Singh,0,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-97,Surendra Kumawat,-8000,,,,,,,,,"); 
         list.push("P1-Villa-98,Hitesh Jain,0,2000,3000,3000,,,,,,"); 
