--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -216,7 +216,7 @@
         list.push("P1-Villa-36,Harish Kumar Yadav,-3000,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-37,Gajendra Sharma,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-38,ManishaSingh,-3000,2000,3000,3000,,,,,,"); 
-        list.push("P1-Villa-39,Manish Salvi,0,2000,3000,3000,3000,3000,3000,,,"); 
+        list.push("P1-Villa-39,Manish Salvi,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-40,Anita Kanwar,-5000,0,2000,2000,,,,,,"); 
         list.push("P1-Villa-41,Monika Mittal,-5000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-42,Prakash Gaur,0,2000,3000,3000,3000,3000,3000,,,"); 
