--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -184,7 +184,7 @@
         list.push("P1-Villa-04,Bhupesh Saini,-3000,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-05,Shishir Maltiyar,-3000,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-06,Hemant Kumar,-5000,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-07,Rahul Pandey,-3000,2000,3000,3000,,,,,,"); 
+        list.push("P1-Villa-07,Rahul Pandey,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-08,Anil Sharma,-5000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-09,Raghvendra Sharma,-5000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-10,Jogendra Sachdeva,-3000,2000,3000,3000,,,,,,"); 
@@ -212,7 +212,7 @@
         list.push("P1-Villa-32,Peeyush Verma,-5000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-33,Prakash Joshi,-5000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-34,Vijay Meena,0,2000,3000,3000,3000,,,,,"); 
-        list.push("P1-Villa-35,D V Saraswat,-3000,2000,3000,3000,,,,,,"); 
+        list.push("P1-Villa-35,D V Saraswat,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-36,Harish Kumar Yadav,-3000,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-37,Gajendra Sharma,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-38,ManishaSingh,-3000,2000,3000,3000,,,,,,"); 
@@ -235,7 +235,7 @@
         list.push("P1-Villa-55,Raj Kamal,-5000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-56_57A,Kajor Mal Goyal,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-58_57B,Deepak Swaroop Garg,0,2000,3000,3000,3000,3000,3000,,,"); 
-        list.push("P1-Villa-59,Pawan Jaiman,-3000,0,3000,3000,,,,,,"); 
+        list.push("P1-Villa-59,Pawan Jaiman,0,0,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-60,Santra Devi,-11000,,,,,,,,,"); 
         list.push("P1-Villa-61,Divanshi Dhanjani,-3000,2000,3000,3000,,,,,,"); 
 
@@ -251,7 +251,7 @@
         list.push("P1-Villa-70,Vineet Mahera,-3000,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-71,Suresh kumar Sharma,-3000,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-72,Nikesh Chaudhary,-5000,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-73,Richa Sharma,-3000,2000,3000,3000,,,,,,"); 
+        list.push("P1-Villa-73,Richa Sharma,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-74,Praveen Kumar Prajapat,-11000,,,,,,,,,"); 
         list.push("P1-Villa-75,Archna Goswami,-3000,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-76,Surya Nagal,-3000,2000,3000,3000,,,,,,"); 
