--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -203,7 +203,7 @@
         list.push("P1-Villa-23,Akshay Saraswat,0,0,0,0,,,,,,"); 
         list.push("P1-Villa-24,Abhimanyu Saraswat,-3000,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-25,Pooja Khandelwal,-11000,,,,,,,,,"); 
-        list.push("P1-Villa-26,Rakesh Kumar,-3000,2000,3000,3000,,,,,,"); 
+        list.push("P1-Villa-26,Rakesh Kumar,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-27,Murari Sharma,-3000,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-28,Mohit Juneja,-3000,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-29,Lokshita Mathur,0,0,0,0,,,,,,"); 
