--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -209,8 +209,8 @@
         list.push("P1-Villa-29,Lokshita Mathur,0,0,0,0,,,,,,"); 
         list.push("P1-Villa-30,Peeyush Mathur,0,0,0,0,,,,,,");   
         list.push("P1-Villa-31,Mahesh Taparia,-3000,2000,3000,3000,,,,,,"); 
-        list.push("P1-Villa-32,Peeyush Verma,-5000,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-33,Prakash Joshi,-2000,2000,3000,3000,1000,,,,,"); 
+        list.push("P1-Villa-32,Peeyush Verma,-2000,2000,3000,3000,1000,,,,,"); 
+        list.push("P1-Villa-33,Prakash Joshi,-5000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-34,Vijay Meena,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-35,D V Saraswat,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-36,Harish Kumar Yadav,-3000,2000,3000,3000,,,,,,"); 
