--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -254,7 +254,7 @@
         list.push("P1-Villa-73,Richa Sharma,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-74,Praveen Kumar Prajapat,-11000,,,,,,,,,"); 
         list.push("P1-Villa-75,Archna Goswami,-3000,2000,3000,3000,,,,,,"); 
-        list.push("P1-Villa-76,Surya Nagal,-3000,2000,3000,3000,,,,,,"); 
+        list.push("P1-Villa-76,Surya Nagal,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-77,Devki Nandan Mathuriya,-3000,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-78,Akshat Mangal,-11000,,,,,,,,,"); 
         list.push("P1-Villa-79,Rahul Peswani,-9000,2000,,,,,,,,"); 
