--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -189,7 +189,7 @@
         list.push("P1-Villa-09,Raghvendra Sharma,-5000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-10,Jogendra Sachdeva,-3000,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-11,Sundeep Mahala,-5000,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-12,Gaurav Kothari,-3000,2000,3000,3000,,,,,,"); 
+        list.push("P1-Villa-12,Gaurav Kothari,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-13,Anil Sharma,-3000,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-14,Ayush   Shandilya,-3000,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-15,Sunil   Kumar,-5000,2000,2000,2000,,,,,,"); 
@@ -247,7 +247,7 @@
         list.push("P1-Villa-66,Manju Gehlot,-3000,2000,3000,3000,,,,,,");
         list.push("P1-Villa-67,Abhishek Jaiman,-3000,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-68,Shrish Jaiman,-3000,2000,3000,3000,,,,,,"); 
-        list.push("P1-Villa-69,Piyush Sharma,-3000,2000,3000,3000,,,,,,"); 
+        list.push("P1-Villa-69,Piyush Sharma,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-70,Vineet Mahera,-3000,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-71,Suresh kumar Sharma,-3000,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-72,Nikesh Chaudhary,-5000,2000,2000,2000,,,,,,"); 
