--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -205,7 +205,7 @@
         list.push("P1-Villa-25,Pooja Khandelwal,-11000,,,,,,,,,"); 
         list.push("P1-Villa-26,Rakesh Kumar,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-27,Murari Sharma,-3000,2000,3000,3000,,,,,,"); 
-        list.push("P1-Villa-28,Mohit Juneja,-3000,2000,3000,3000,,,,,,"); 
+        list.push("P1-Villa-28,Mohit Juneja,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-29,Lokshita Mathur,0,0,0,0,,,,,,"); 
         list.push("P1-Villa-30,Peeyush Mathur,0,0,0,0,,,,,,");   
         list.push("P1-Villa-31,Mahesh Taparia,-3000,2000,3000,3000,,,,,,"); 
